--- a/themes/next/source/css/_common/components/footer/footer.styl
+++ b/themes/next/source/css/_common/components/footer/footer.styl
@@ -14,6 +14,7 @@
 
 .powered-by,
 .theme-info { display: inline-block; }
+.exist-time { font-size: 12px; margin-top: 6px; }
 
 .cc-license {
   margin-top: 10px;
