--- a/themes/next/source/css/_common/components/highlight/highlight.styl
+++ b/themes/next/source/css/_common/components/highlight/highlight.styl
@@ -86,6 +86,12 @@ pre {
     padding-left: 10px
     padding-right: 10px
     background-color: $highlight-background
+
+    .line {
+        &::selection {
+            color: yellow
+        }
+    }
   }
 
   .line { height: 20px; }
