--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -17,7 +17,8 @@ $grey-dark    = #999
 $grey-dim     = #666
 $black-light  = #555
 $black-dim    = #333
-$black-deep   = #222
+// $black-deep   = #222
+$black-deep   = #3D5160
 $red          = #ff2a2a
 $blue-bright  = #87daff
 $blue         = #0684bd
@@ -46,7 +47,7 @@ $border-color                 = $grey-light
 $body-bg-color                = white
 
 // Selection
-$selection-bg                 = $blue-deep
+$selection-bg                 = $black-deep
 $selection-color              = white
 
 
